@@ -1,5 +1,7 @@
 2012-09-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* menu.py, view.py, twitter/output.py, twitter/tweetentry.py:
+	  Added a new pop-up menu item 'View Conversation'.
 	* share/html/theme/: Added a new attribute 'data-inreplyto'.
 	* plugins/twitter/: Added support for unofficial related_results API.
 	* twittytwister/twitter.py, twittytwister/tjson.py: Added support
